[gd_scene load_steps=4 format=3 uid="uid://c53j1q8gs0b1g"]

[ext_resource type="Theme" uid="uid://pv7wa46kuqjf" path="res://asset/theme/home/home_tab_world.tres" id="1_ai0eq"]
[ext_resource type="Script" path="res://scene/home/tab_world/button_tab_world.gd" id="2_ntstj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g5qxx"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="WorldButton" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_ai0eq")
script = ExtResource("2_ntstj")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -14.52
offset_top = -12.5
offset_right = 178.48
offset_bottom = 30.5
grow_vertical = 2
rotation = -0.959931
alignment = 0

[node name="Panel_Circle" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 5.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g5qxx")

[connection signal="focus_entered" from="Button" to="." method="_on_button_highlight_update"]
[connection signal="focus_exited" from="Button" to="." method="_on_button_highlight_update"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_highlight_update"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_highlight_update"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
